--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bright": "^0.8.4",
+    "extract-md-headings": "^0.2.5",
+    "gray-matter": "^4.0.3",
     "next": "13.4.9",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "typescript": "5.1.6",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7"
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.45.0",
+    "eslint-config-next": "13.4.10",
+    "typescript": "5.1.6"
   }
 }
