--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "6.1.1",
     "rehype-slug": "5.1.0",
-    "remark-gfm": "3.0.1",
-    "zustand": "4.3.9"
+    "remark-gfm": "3.0.1"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
